# CNexus2.0

./: .gitignore  FREEZE_MANIFEST.md  README.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v2.4.0-GA.md  _api_status.json  _float_content.html  _shell_content.html  app_ui.py  app_ui_backup.py  app_v2.py  build_ui.py  check_init.py  cnexus_next_css.txt  current_js.txt  extract_js.py  generate_new_ui.py  new_float.html  new_shell.html  replace_html.py  requirements.txt  run_gateway_hidden.vbs  start_cnexus.bat  start_cnexus_2.0.ps1  start_cnexus_desktop.bat  start_cnexus_desktop.ps1  stop_cnexus.bat  universal_gateway.py  verify_new.py
01_runtime_spec/: 03_identity_position.md  04_recall_context.md  08_error_codes_response.md
02_stability_spec/: 04_degradation_policy.md
07_feedback_runtime_controller/: 01_feedback_controller.md
_global_registry/: GLOBAL_SEMANTIC_REGISTRY.md
config/: class.json  cnexus_state_store.json  graph.json  llm_config.json  router.json
constitution/: 00_认知宪法.md  README.md
core_essence/: 00_layer_invariance_axioms.md  (+5 more)
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.bundle-only.conf.json  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/cnexus-runtime-sidecar/: Cargo.toml  build.rs
frontend/src-tauri/cnexus-runtime-sidecar/src/: main.rs
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: boot_sequence.rs  boot_state.rs  boot_trace.rs  boot_ui.rs  exit_trace.rs  lib.rs  main.rs  ollama_probe.rs  pe_utils.rs  runtime_cleanup.rs  runtime_preflight.rs  runtime_probe.rs  runtime_sidecar.rs  security_bootstrap.rs  smoke_report.rs  webview_shell.rs  win_process.rs  window_layout.rs
frontend/src-tauri/windows/: CNexus-restart.bat  hooks.nsh  restart-cnexus-desktop.ps1
(+1030 files in other folders)
