[package]
name = "cnexus-product"
version = "0.1.0-alpha"
description = "CNexus Desktop — floating Mind bar"
authors = ["CNexus"]
edition = "2021"
default-run = "cnexus-product"

[lib]
name = "cnexus_product_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cnexus-product"
path = "src/main.rs"

# cnexus-runtime sidecar: built via scripts/build-desktop-sidecar.ps1 (see externalBin)

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
