[package]
name = "cnexus-runtime-sidecar"
version = "0.1.0-alpha"
edition = "2021"
publish = false

[[bin]]
name = "cnexus-runtime"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
